# wayland-kms

./: .gitignore  Makefile.am  configure.ac  meson.build  wayland-kms-auth.c  wayland-kms-auth.h  wayland-kms.c  wayland-kms.h  wayland-kms.pc.in  wayland-kms.xml
protocol/: meson.build  wayland-kms.xml
src/: meson.build  wayland-kms-auth.c  wayland-kms-auth.h  wayland-kms.c
